Added EntityFramework support and endpoints in WalletController

--- a/ViruBackend/appsettings.Development.json
+++ b/ViruBackend/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=Viru;Username=user;Password=passes"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
