--- a/ViruBackend/appsettings.json
+++ b/ViruBackend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "default": "Host=localhost;Database=Viru;Username=<Username>;Password=<Password>"
+    "DefaultConnection": "Host=localhost;Database=Viru;Username=<user>;Password=<password>"
   },
   "Logging": {
     "LogLevel": {
