--- a/ViruBackend/appsettings.json
+++ b/ViruBackend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=Viru;Username=<user>;Password=<password>"
+    "DefaultConnection": "Host=localhost;Database=Viru;Username=posgres;Password=Shaman2002$"
   },
   "Logging": {
     "LogLevel": {
