--- a/Viru/Viru.csproj
+++ b/Viru/Viru.csproj
@@ -60,6 +60,9 @@
 	  <MauiXaml Update="AddWalletPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="PaymentPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
