--- a/Viru/Viru.csproj
+++ b/Viru/Viru.csproj
@@ -54,15 +54,22 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="nor0x.Maui.ColorPicker" Version="1.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Compile Update="AddWalletPage.xaml.cs">
 	    <DependentUpon>AddWalletPage.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="AddWalletPage.xaml.cs">
+	    <DependentUpon>AddWalletPage.xaml</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="AddWalletPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="AddWalletPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
